--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -16,6 +16,8 @@ title: Interstellar Exploration
         <nav>
             <a href="/">Home</a>
             <a href="/about/">About</a>
+            <a href="/Blog 1/">log</a>
+            <a href="/Blog 2/">log 2</a/
         </nav>
     </header>
 
