--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,7 +1,3 @@
----
-title: Interstellar Exploration
----
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,21 +6,24 @@ title: Interstellar Exploration
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
 </head>
-<body>
-    <header>
-        <h1>Explorer's Blog</h1>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/about/">About</a>
-        </nav>
-    </header>
-
-    <main>
-        {{ content }}
-    </main>
-
+<body id="design">
+    <nav>
+    <ul>
+        <li><a href="/" title="Go home">Home</a></li>
+        <li><a href="/about/" title="About the boilerplate">About</a></li>
+        <li><a href="/log1/" title="Blog Post 1">Post 1</a></li>
+        <li><a href="/log2/" title="Blog Post 2">Post 2</a></li>
+    </ul>
+    </nav>
+    <article>
+        <h1 id="arttitle">{{ title }}</h1>
+        <p id="artdate"><strong>Date:</strong> {{ date | date: "%B %d, %Y" }}</p>
+        <div id="artpost">
+            {{ content }}
+        </div>
+    </article>
     <footer>
-        <p>© 2025 Interstellar Logs</p>
+        <p>&copy; {% year %} Interstellar Logs</p>
     </footer>
 </body>
 </html>
