--- a/index.liquid
+++ b/index.liquid
@@ -1,13 +1,11 @@
 ---
-title: "Home"
-layout: "layout.liquid"
+layout: layout.liquid
+title: Home
 ---
+<p>Welcome to the Explorer's Blog. Join me as I document my adventures across the galaxy.</p>
 
-<h2>Welcome to the Explorer's Blog</h2>
-<p>A lone human explores the galaxy, documenting their discoveries.</p>
-
-<h3>Latest Logs</h3>
+<h2>Recent Posts</h2>
 <ul>
-    <li><a href="/blog/log1/">First Contact with an Unknown Civilization</a></li>
-    <li><a href="/blog/log2/">Surviving on an Alien Planet</a></li>
+    <li><a href="/posts/post1/">First Encounter with the Zogarians</a></li>
+    <li><a href="/posts/post2/">Navigating the Andromeda Nebula</a></li>
 </ul>
