changing the title

--- a/index.liquid
+++ b/index.liquid
@@ -1,6 +1,6 @@
 ---
 layout: layout.liquid
-title: Home
+title: Interstellar Exploration
 ---
 <p>Welcome to the Explorer's Blog. Join me as I document my adventures across the galaxy.</p>
 
